CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
Copyright (c) 2017, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved.

1.2.2
-----
* Bugs
    * #22 Ublu would exit on missing nested include
* Commands
    * `gensh` cleanup comments
* Examples
    * `recordCount.sh` cleanup

1.2.1 2018-12-03
-----
* Commands
    * `const -defined` .. also, `const` now takes any source data sink for name
    * `db`
        * `-usessl -ssl`
        * `-rdb ~@{rdbname}`
        * clarify schema vs database
    * `gensh` now by default noglobs the arguments passed to it, `glob` keyword if globbing desired
    `include` `-if` `-!if` conditional inclusion
* Documentation
    * `db` clarify schema vs database
* Examples
	* Test
                * `recordCount.ublu` SQL put count of records in schema.file
		* `testdbrepl.ublu` example of db table replication
                * Suite
                    * `t.db.ublu` test database
* Extensions
    * `ux.utils.ublu` compilation utils
    * `ux.jlsc.ublu` job list selection criteria
    * `ux.job.ublu` jobs
* Miscellaneous
    * Ublu now by default compiles in Microsoft MSSQL [TM] support.
        * The MSSQL JDBC driver is not included in the distribution.
* Bug fixes
    * msgq did unnecessary looping

1.2.0 2018-10-07
-----
* Commands
    * `jvm` -set -get manipulate Java System properties
    * `server` now does SSL
    * `sock` now does SSL sockets
    * `watson` command added
    * `db`
        * better support for TableReplicator `-destqopt` `-destport`
        * `-star` changed to work like other queries w/r/t concurrency and holdability.
        * stub for mssql support updated on user bug report
    * `desktop`
        * `-supported` was missing
    * `list`
    	* `-len` same as `-size`
    	* `-src` same as `-source`
    * `programcall`
    	* bug fixes
    * `splfol`
        * bug fixes
        * rendering
* Examples
    * `endJobName.ublu` ends first instance of a job by name