@@ -1,5 +1,5 @@
 Copyright (c) 2015, Absolute Performance, Inc. http://www.absolute-performance.com
-Copyright (c) 2017, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
+Copyright (c) 2019, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
 All rights reserved.
 
 
