@@ -1,5 +1,5 @@
 CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
-Copyright (c) 2017, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
+Copyright (c) 2019, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
 All rights reserved.
 
 1.2.2
@@ -8,6 +8,7 @@ All rights reserved.
     * #22 Ublu would exit on missing nested include
 * Commands
     * `gensh` cleanup comments
+    * `server` now can set inetaddr (default main interface) and backlog (default 50)
 * Examples
     * `recordCount.sh` cleanup
 
@@ -20,7 +21,7 @@ All rights reserved.
         * `-rdb ~@{rdbname}`
         * clarify schema vs database
     * `gensh` now by default noglobs the arguments passed to it, `glob` keyword if globbing desired
-    `include` `-if` `-!if` conditional inclusion
+    * `include` `-if` `-!if` conditional inclusion
 * Documentation
     * `db` clarify schema vs database
 * Examples
